--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@ Gemfile.lock
 
 # Jekyll cache
 .jekyll-cache
-.jekyll-metadata
+# .jekyll-metadata
 _site
-_app
+# _app
 
 # RubyGems
 *.gem
@@ -18,10 +18,10 @@ package-lock.json
 
 # IDE configurations
 .idea
-.vscode/*
-!.vscode/settings.json
-!.vscode/extensions.json
-!.vscode/tasks.json
+.vscode
+# !.vscode/settings.json
+# !.vscode/extensions.json
+# !.vscode/tasks.json
 
 # Misc
 # _sass/dist
